--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Test</h1>
-    <img src="/assets/profile_pic.png" alt="">
+    <img src="/assets/profile-pic.png" alt="">
 </body>
 </html>
