--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Wright</title>
+    <link rel="stylesheet" href="/pages/styles.css">
 </head>
 <body>
-    <h1>Daniel Wright</h1>
+    <h1 class="name-header" >Daniel Wright</h1>
     <img src="assets/profile-pic.png" alt="test">
     <br />
     <a href="pages/about_me.html">About Me</a>
