--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <img src="assets/profile-pic.png" alt="test">
     <br />
     <a href="pages/about_me.html">About Me</a>
+    <br />
+    <a href="pages/about_me.html">Software Developer</a>
+    <br />
+    <a href="pages/about_me.html">Quality Engineer</a>
+    <br />
+    <a href="pages/about_me.html">Cybersecurity</a>
+    <br />
     <a href="pages/about_me.html">Resume</a>
 </body>
 </html>
