Modofied folder structure

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Wright</title>
-    <link rel="stylesheet" href="/pages/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1 class="name-header" >Daniel Wright</h1>
     <img src="assets/profile-pic.png" alt="test">
     <br />
     <a href="pages/about_me.html">About Me</a>
+    <br />
+    <a href="https://www.linkedin.com/in/daniel-wright46/">LinkedIn</a>
     <br />
     <a href="pages/about_me.html">Software Developer</a>
     <br />
