--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>test</h1>
-    <a href="https://github.com/Daniel-Wright-Developer/Portfolio-Daniel-Wright">Home</a>
+    <a href="/index.html">Home</a>
     <br />
         <a href="https://www.google.com/">Outside Link Test</a>
 </body>
